ihb-platform/k8s/userservice/userservice-deployment.yaml
# Deployment, описывающий pod и контейнер userservice; устанавливает replica set, ресурсы, переменные и образ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      name: userservice
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: nikirenegade/ihb-userservice:1.0.2-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
