ihb-platform/k8s/userservice/userservice-service.yaml
# Service типа NodePort для доступа к userservice внутри/снаружи кластера
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  selector:
    app: userservice
  ports:
    - name: userservice
      port: 80
      targetPort: 8000
  type: NodePort
