ihb-platform/k8s/userservice/userservice-ingress.yaml
# Ingress для основного API userservice и пути /metrics
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: title
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
