ihb-platform/k8s/userservice/userservice-prometheus-ingress.yaml
# Ingress для доступа к Prometheus UI (host prometheus.arch.homework)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stack-kube-prometheus-stac-prometheus
                port:
                  number: 9090
